add workflow check and issues template

--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 100
-      - uses: flotiq/check-changelog-and-version
+      - uses: flotiq/check-changelog-and-version@v0.0.1
         with:
           changelog_file: CHANGELOG.md
           version_file: VERSION
