--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "check-changelog-and-version",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "index.js",
   "repository": "https://github.com/flotiq/check-changelog-and-version.git",
   "author": "Hello FLotiq <hello@flotiq.com>",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.11.1",
-    "@actions/github": "^6.0.0",
+    "@actions/github": "^6.0.0"
+  },
+  "devDependencies": {
     "changelog-parser": "^3.0.1",
     "semver-compare-cli": "^2.0.0"
   }
