--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -22,8 +22,18 @@ jobs:
           node-version: '20'
           cache: 'yarn'
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: |
+          yarn cache clean
+          yarn install --frozen-lockfile --force
+      - name: Debug node_modules
+        run: ls -al node_modules
+      - name: Debug npx path
+        run: |
+          which npx
+          npx which semver-compare-cli
+          npx which changelog-parser
+          node -v
       - uses: flotiq/check-changelog-and-version@v0.1.2
         with:
           changelog_file: CHANGELOG.md
-          version_file: VERSION
+          version_file: package.json
