--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 100
-      - uses: flotiq/check-changelog-and-version@v0.1.5
+      - uses: flotiq/check-changelog-and-version@34dcdd843e8063480cbbf8316ac3a01743fdb017
         with:
           changelog_file: CHANGELOG.md
           version_file: package.json
