--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -10,8 +10,10 @@ jobs:
   check-changelog:
     runs-on: ubuntu-latest
     env:
-      CI_MERGE_REQUEST_SOURCE_BRANCH_NAME: ${{ github.event.pull_request.head.ref }}
-      CI_MERGE_REQUEST_TARGET_BRANCH_NAME: ${{ github.event.pull_request.base.ref }}
+      CI_MERGE_REQUEST_SOURCE_BRANCH_NAME:
+        ${{ github.event.pull_request.head.ref }}
+      CI_MERGE_REQUEST_TARGET_BRANCH_NAME:
+        ${{ github.event.pull_request.base.ref }}
     steps:
       - uses: actions/checkout@v4
         with:
