--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,7 @@
 name: 'Check Changelog and Version'
-description: 'Checks if the CHANGELOG and version in package.json are updated correctly in a pull request.'
+description:
+  'Checks if the CHANGELOG and version in package.json are updated correctly in
+  a pull request.'
 inputs:
   changelog_file:
     description: 'Path to the CHANGELOG file.'
