--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
-    "prettier": "^3.5.2"
+    "changelog-tools": "^1.8.0",
+    "prettier": "^3.5.2",
+    "semver": "^7.7.1"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.2",
