--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "check-changelog-and-version",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "main": "src/index.js",
   "repository": "https://github.com/flotiq/check-changelog-and-version.git",
   "author": "Hello FLotiq <hello@flotiq.com>",
@@ -14,7 +14,9 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
-    "prettier": "^3.5.2"
+    "changelog-tools": "^1.8.0",
+    "prettier": "^3.5.2",
+    "semver": "^7.7.1"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.2",
